# MainsLab-test-assignment

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: Check.yml
mainslab/: settings.py  urls.py
